--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.2.4",
+    "eslint": "^8.41.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
   },
