--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,16 @@
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.2.4",
-    "eslint": "^8.41.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.0.4"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/node": "^20.2.5",
+    "prisma": "^4.15.0",
+    "tsx": "^3.12.7"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "fastify": "^4.17.0"
   }
 }
