chore: create new ambient var

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+#database
 DATABASE_URL="file:./dev.db"
+
+#github
+GITHUB_CLIENT_ID="a39c1443c52adc99fb9e"
+GITHUB_CLIENT_SECRET="4112079c1c7fdce9537d09b301d24171043a2387"
