--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
     "tsx": "^3.12.7"
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@prisma/client": "^4.15.0",
     "fastify": "^4.17.0",
+    "httpie": "^1.1.2",
     "zod": "^3.21.4"
   }
 }
