--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.2.5",
+    "dotenv": "^16.3.1",
     "prisma": "^4.15.0",
     "tsx": "^3.12.7"
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "@prisma/client": "^4.15.0",
+    "axios": "^1.4.0",
     "fastify": "^4.17.0",
     "httpie": "^1.1.2",
     "zod": "^3.21.4"
