--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@fastify/jwt": "^7.2.0",
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "fastify": "^4.17.0",
