--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.257.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
